--- a/style.css
+++ b/style.css
@@ -1,65 +1,61 @@
 body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     min-height: 100vh;
     background-color: #cfbfbf;
 }
 
 .card-content{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template: 300px auto auto auto / auto auto ;
     background-color: #111D4A;
     width: 100%;
     height: 100vh;
-    margin: 0 auto;
-    max-width: 800px;
 }
 
 img{
-    height: 50%;
     object-fit: cover;
+    grid-row: 1/2;
+    grid-column:1/3;
+    width: 100%;
+    height: 100%;
 }
 
-.card-content-01{
-    margin: 10%;
-}
 .card-title{
     color: #05cbe9;
     font-size: 1.75rem;
     font-family: 'Blinker',sans-serif;
-    align-self: flex-start;
-    justify-content: left;
+    grid-row: 2/3;
+    grid-column:1/3;
+    margin: 1% 8%;
 }
 .card-body{
     color: #d6d3d3;
     font-size: 1.2rem;
     font-family: 'Blinker',sans-serif;
-    align-self: flex-start;
-    justify-content: left;
-}
-.card-footer{
-    color: #cfbfbf;
-    font-size: 1rem;
-    display: flex;
-    flex-direction: row;
-    align-self: flex-end;
-    align-items: self-end;
-    justify-content: space-between;
+    grid-row: 3/4;
+    grid-column:1/3;
+    margin: 1% 8%;
 }
 
 .text-01{
+    color: #d6d3d3;
     width: 10%;
+    grid-row: 4/5;
+    grid-column: 1/2;
+    align-self: self-end;
+    margin: 8%;
 }
 .btn-01{
     color: #111D4A;
     background-color: #05cbe9;
     padding: 2%;
-    height: 3%;
+    height: 20%;
     border-radius: 5%;
     text-transform: uppercase;
     font-weight: 600;
+    grid-row: 4/5;
+    grid-column: 2/3;
     align-self: self-end;
+    margin: 8%;
 }
 
 .btn-01:hover{
@@ -69,12 +65,48 @@ img{
 
 @media (min-width:675px){
     .card-content{
-        flex-direction:row ;
+        width: 100%;
+        grid-template: 100px 100px 300px/300px 50px auto;
         height: auto;
-        margin: 0;
     }
 
-    .card-content-01{
-        margin: 0 5%;
+    img{
+        grid-row: 1/-1;
+        grid-column:1/2;
+        width: 100%;
+        height: 100%;
     }
+
+    .card-title{
+        grid-row: 1/2;
+        grid-column:2/-1;
+        margin-top: 5%;
+    }
+    .card-body{
+        grid-row: 2/3;
+        grid-column:2/-1;
+        margin-top:3%;
+    }
+
+    .text-01{
+        width: 10%;
+        grid-row: 3/4;
+        grid-column: 2/3;
+        align-self: self-end;
+        justify-self: right;
+        margin: 20%;
+        
+    }
+    .btn-01{
+        grid-row: 3/4;
+        grid-column: 3/4;
+        height: 10%;
+        width: 25%;
+        align-self: self-end;
+        justify-self: right;
+        text-align: center;
+        margin: 2%;
+        
+    }
+
 }
