--- a/style.css
+++ b/style.css
@@ -5,42 +5,42 @@ body{
 
 .card-content{
     display: grid;
-    grid-template: 300px auto auto auto / auto auto ;
     background-color: #111D4A;
     width: 100%;
     height: 100vh;
+    grid-template-columns: fr 1fr;
+    grid-template-rows: 3fr 1fr 1fr 1fr;
+    grid-template-areas: 
+    "photo photo"
+    "topic topic"
+    "subtopic subtopic"
+    "footer-01 footer-02";
 }
 
 img{
-    object-fit: cover;
-    grid-row: 1/2;
-    grid-column:1/3;
-    width: 100%;
-    height: 100%;
+    grid-area: photo;
+
 }
 
 .card-title{
     color: #05cbe9;
     font-size: 1.75rem;
     font-family: 'Blinker',sans-serif;
-    grid-row: 2/3;
-    grid-column:1/3;
+    grid-area: topic;
     margin: 1% 8%;
 }
 .card-body{
     color: #d6d3d3;
     font-size: 1.2rem;
     font-family: 'Blinker',sans-serif;
-    grid-row: 3/4;
-    grid-column:1/3;
+    grid-area: subtopic;
     margin: 1% 8%;
 }
 
 .text-01{
     color: #d6d3d3;
     width: 10%;
-    grid-row: 4/5;
-    grid-column: 1/2;
+    grid-area: footer-01;
     align-self: self-end;
     margin: 8%;
 }
@@ -52,8 +52,7 @@ img{
     border-radius: 5%;
     text-transform: uppercase;
     font-weight: 600;
-    grid-row: 4/5;
-    grid-column: 2/3;
+    grid-area: footer-02;
     align-self: self-end;
     margin: 8%;
 }
@@ -68,6 +67,7 @@ img{
         width: 100%;
         grid-template: 100px 100px 300px/300px 50px auto;
         height: auto;
+        grid-gap: 1.5em 0.5em;
     }
 
     img{
@@ -85,7 +85,6 @@ img{
     .card-body{
         grid-row: 2/3;
         grid-column:2/-1;
-        margin-top:3%;
     }
 
     .text-01{
@@ -94,7 +93,7 @@ img{
         grid-column: 2/3;
         align-self: self-end;
         justify-self: right;
-        margin: 20%;
+        margin-bottom: 50%;
         
     }
     .btn-01{
@@ -105,7 +104,6 @@ img{
         align-self: self-end;
         justify-self: right;
         text-align: center;
-        margin: 2%;
         
     }
 
